--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mariscos-jaliscos",
   "homepage": "https://virtualxptours.github.io/mariscos-jaliscos/",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
